# dfclean

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
dfclean/: __init__.py  clean.py  cli.py  load_cfg_file.py  main.py  process_removes.py  stats.py  transform.py  util.py  validate_cfg.py
dftidy/: __init__.py  cli.py  process_removes.py  tidy.py
prompts/: dfclean_load_config.txt  dfclean_validate_config.txt
samples/: README.md  config_sample.yaml  data_cleaned.csv  data_sample.csv  data_tidied_expected.csv  pyproject.toml  run_dfclean.py  run_dftidy.py
tests/: __init__.py  conftest.py  test_clean.py  test_cli.py  test_init.py  test_main.py  test_process_removes.py  test_stats.py  test_tidy.py  test_transform.py  test_util.py  test_validate_cfg.py
